create a common template for challenges

--- a/desafios/D1.md
+++ b/desafios/D1.md
@@ -1,3 +1,5 @@
+## Contexto
+
 Sempre quando começamos um projeto, uma das primeiras coisas a serem feitas é descobrir o caminho a Produção.
 Neste primeiro desafio vamos descobrir esse caminho em um ambiente/contexto bem básico: temos apenas um servidor Linux disponível e a meta é ter um hello world rodando no mesmo.
 Embora pareça uma algo simples e básico, existem vários conceitos/decisões/tarefas implícitas.
