--- a/desafios/D2.md
+++ b/desafios/D2.md
@@ -1,3 +1,5 @@
+## Contexto
+
 Parece que nosso servidor teve uma atualização de segurança durante a noite e precisou ser reiniciado. 
 Após isso algumas de nossas aplicações deixaram de funcionar =(
 
