--- a/desafios/D3.md
+++ b/desafios/D3.md
@@ -13,13 +13,19 @@ Lançar página de campnha do nosso produto!
 
 ## Conceitos e Pontos Importantes
 
-*
+* HTML e CSS
+* Como alterar o HTML da página do iPhone 7 pra trocar pra 8 xD
+* Fazer deploy manual novamente
 
 ## Resultado esperado
 
 Visualizar página com o produto conforme detalhes abaixo:
 
-...
+![](images/page1.png)
+![](images/page2.png)
+![](images/page3.png)
+![](images/page4.png)
+![](images/page5.png)
 
 ### Imagens:
 * [Banner](https://images.apple.com/v/iphone-7/d/images/overview/hero_fallback_large.png)
