--- a/desafios/D4.md
+++ b/desafios/D4.md
@@ -1,31 +1,38 @@
 ## Contexto
 
-Esse nosso data center está cada dia pior. Com a chuva de ontem, um programador sênior deixou a janela aberta e acabou molhando alguns servidores. E a nossa máquina estava entre elas. Perda total, meus amigos. Com isso em mente, criamos uma nova máquina para que possamos rapidamente recolocar nosso produto no ar. E claro, automatizar para a próxima vez que chover =). 
+Esse nosso data center está cada dia pior. Com a chuva de ontem, um programador sênior deixou a janela aberta e acabou molhando alguns servidores. E a nossa máquina estava entre elas. Perda total, meus amigos. 
+Os clientes estão reclamando que não conseguem acessar nossa página e isso afeta negativamente o lançamento de nosso produto =(.
+Conseguimos em caráter de urgência uma nova máquina para que possamos rapidamente recolocar nosso produto no ar. E claro, automatizar para a próxima vez que chover =). 
 
 ## Objetivo
 
-* Colocar o produto novamente no ar. 
+* Colocar o produto novamente no ar. (Cada minuto fora do ar significam mais clientes insatisfeitos)
 * Automatizar o processo de provisionamento da máquina. 
 
 ## Pré Requisitos
 
 * Desafios passados.
-* Ter colocado seus dados no arquivo [users.yml](https://github.com/guitoper/mao-na-massa-di/blob/master/users.yml) 
-* Ter acesso na nova máquina. Testar com o comando `ssh SEU_USUARIO@ec2-13-59-84-172.us-east-2.compute.amazonaws.com` 
+* Ter colocado seus dados no arquivo [users.yml](https://github.com/guitoper/mao-na-massa-di/blob/master/users.yml)
+* Ter acesso na nova máquina. Testar com o comando `ssh SEU_USUARIO@ec2-13-59-84-172.us-east-2.compute.amazonaws.com` (Caso não funcione da um grito no Slack =)
 
 ## Conceitos e Pontos Importantes
 
-* Automação de infra-estrutura. 
-* Infrastructure As Code.
+* Downtime
+>> ...estima-se que downtimes signifiquem a perda de produtividade média de 50% quando nos referimos a elementos críticos do negócio e da operação. De acordo com o Gartner, o custo de um downtime, levando-se em conta uma “média” entre médias e grandes empresas, é de $42.000,00/hora. ([Qual é o custo de um downtime?](https://www.opservices.com.br/qual-e-o-custo-de-um-downtime/)) 
+
+* Foco
+
+Nossa aplicação está fora do ar e precisamos voltá-la o quanto antes, mesmo que isso signifique fazer tudo manual novamente. Depois sim pensamos em como melhorar para que em um próximo evento tenhamos um esforço reduzido.
+
+* [Infrastructure as Code: A Reason to Smile](https://www.thoughtworks.com/insights/blog/infrastructure-code-reason-smile)
+
 * Como ferramentas, existem várias que podem te ajudar. Destacamos algumas como:
   * Ansible
   * Chef
   * Puppet
   * Bash
+
 * Recomendamos também utilizar Vagrant para testar o seu script antes de rodar ná máquina de produção. 
-
-## 	
-
 
 ## Resultado esperado
 
