--- a/desafios/D4.md
+++ b/desafios/D4.md
@@ -18,7 +18,7 @@ Conseguimos em caráter de urgência uma nova máquina para que possamos rapidam
 ## Conceitos e Pontos Importantes
 
 * Downtime
->> ...estima-se que downtimes signifiquem a perda de produtividade média de 50% quando nos referimos a elementos críticos do negócio e da operação. De acordo com o Gartner, o custo de um downtime, levando-se em conta uma “média” entre médias e grandes empresas, é de $42.000,00/hora. ([Qual é o custo de um downtime?](https://www.opservices.com.br/qual-e-o-custo-de-um-downtime/)) 
+> ...estima-se que downtimes signifiquem a perda de produtividade média de 50% quando nos referimos a elementos críticos do negócio e da operação. De acordo com o Gartner, o custo de um downtime, levando-se em conta uma “média” entre médias e grandes empresas, é de $42.000,00/hora. ([Qual é o custo de um downtime?](https://www.opservices.com.br/qual-e-o-custo-de-um-downtime/)) 
 
 * Foco
 
