--- a/desafios/D4.md
+++ b/desafios/D4.md
@@ -27,12 +27,17 @@ Nossa aplicação está fora do ar e precisamos voltá-la o quanto antes, mesmo 
 * [Infrastructure as Code: A Reason to Smile](https://www.thoughtworks.com/insights/blog/infrastructure-code-reason-smile)
 
 * Como ferramentas, existem várias que podem te ajudar. Destacamos algumas como:
+  * Bash/Shell Scripts
   * Ansible
-  * Chef
   * Puppet
-  * Bash
+  * Chef
 
-* Recomendamos também utilizar Vagrant para testar o seu script antes de rodar ná máquina de produção. 
+Em uma analogia bem simples os scripts Bash e Shell estão para uma programação de baixo nível como C e estas "novas" ferramentas como Ansible estão para uma programação de alto nível. Você consegue fazer tudo com ambas, porém muita coisa será abstraída caso opte por uma ferramenta de automação. 
+
+* Máquinas Virtuais
+
+Recomendamos utilizar máquinas virtuais durante o desenvolvimento para que seja possível testar seus scripts de provisionamento. Um jeito "fácil" de fazer isso é com a dupla Virtualbox & Vagrant.
+Vagrant é uma ferramenta para construir e gerenciar maquinas virtuais com foco em automação. Vai te permitir gerar um script com as configurações necessárias para sua máquina virtual e iniciar/parar/reiniciar com muita facilidade.
 
 ## Resultado esperado
 
