--- a/desafios/D4.md
+++ b/desafios/D4.md
@@ -17,24 +17,24 @@ Conseguimos em caráter de urgência uma nova máquina para que possamos rapidam
 
 ## Conceitos e Pontos Importantes
 
-* Downtime
+### Downtime
 > ...estima-se que downtimes signifiquem a perda de produtividade média de 50% quando nos referimos a elementos críticos do negócio e da operação. De acordo com o Gartner, o custo de um downtime, levando-se em conta uma “média” entre médias e grandes empresas, é de $42.000,00/hora. ([Qual é o custo de um downtime?](https://www.opservices.com.br/qual-e-o-custo-de-um-downtime/)) 
 
-* Foco
+### Foco
 
 Nossa aplicação está fora do ar e precisamos voltá-la o quanto antes, mesmo que isso signifique fazer tudo manual novamente. Depois sim pensamos em como melhorar para que em um próximo evento tenhamos um esforço reduzido.
 
-* [Infrastructure as Code: A Reason to Smile](https://www.thoughtworks.com/insights/blog/infrastructure-code-reason-smile)
+### [Infrastructure as Code: A Reason to Smile](https://www.thoughtworks.com/insights/blog/infrastructure-code-reason-smile)
 
-* Como ferramentas, existem várias que podem te ajudar. Destacamos algumas como:
-  * Bash/Shell Scripts
-  * Ansible
-  * Puppet
-  * Chef
+### Como ferramentas, existem várias que podem te ajudar. Destacamos algumas como:
+ * Bash/Shell Scripts
+ * Ansible
+ * Puppet
+ * Chef
 
 Em uma analogia bem simples os scripts Bash e Shell estão para uma programação de baixo nível como C e estas "novas" ferramentas como Ansible estão para uma programação de alto nível. Você consegue fazer tudo com ambas, porém muita coisa será abstraída caso opte por uma ferramenta de automação. 
 
-* Máquinas Virtuais
+### Máquinas Virtuais
 
 Recomendamos utilizar máquinas virtuais durante o desenvolvimento para que seja possível testar seus scripts de provisionamento. Um jeito "fácil" de fazer isso é com a dupla Virtualbox & Vagrant.
 Vagrant é uma ferramenta para construir e gerenciar maquinas virtuais com foco em automação. Vai te permitir gerar um script com as configurações necessárias para sua máquina virtual e iniciar/parar/reiniciar com muita facilidade.
