Added link which help me to create a Linux service to run a ASP.NET Core application

--- a/desafios/D2.md
+++ b/desafios/D2.md
@@ -19,3 +19,7 @@ Garantir que nossa aplicação seja executada caso o servidor seja reiniciado
 ## Resultado esperado
 
 Nossa aplicação deve ser executada automaticamente em caso de reinicialização/queda de nosso Servidor.
+
+## Links de ajuda
+
+* [Tutorial que demonstra a criação de um serviço no Linux para executar uma aplicação ASP.NET Core] (https://shiningdragonsoftware.net/2016/11/26/net-core-and-devops-part-2-running-our-first-asp-net-core-service-on-linux/)
