--- a/desafios/D5.md
+++ b/desafios/D5.md
@@ -21,15 +21,16 @@ Estes riscos são pequenos se consideramos que nossa aplicação ainda é muito 
 ## Conceitos e Pontos Importantes
 
 ### Integração Contínua
-Importante ressaltar que Integração Contínua é um conceito que vai além de uma ferramenta que constroi seu código. É também  um dos pilares para a Entrega Contínua e requer disciplina do time para ser colocada em prática.
+Importante ressaltar que Integração Contínua é um conceito que vai além de uma ferramenta que automatiza algumas tarefas relacionadas ao seu código. É também  um dos pilares para a Entrega Contínua e requer disciplina do time para ser colocada em prática.
 
 [Este artigo](https://www.martinfowler.com/articles/continuousIntegration.html) do Martinho explica muito bem os detalhes deste conceito.
 
-### Pipelines
-No geral as ferramentas de CI nos permitem criar pipelines de tarefas que representarão nossa 'build'.
-
 ### CI
 CI é a sigla para Continuous Integration, porém é frequentemente utilizado por desenvolvedores para se referir à ferramente ou servidor de integração contínua.
+
+### Pipelines
+Pipelines são sequências de tarefas onde o resultado de uma tarefa é a entrada para a próxima. No contexto de uma ferramenta de CI geralmente cada tarefa será um comando ou script que executará um passo do processo de build. 
+Um bom Pipepline é estruturado de uma forma que permite feedbacks rápidos sobre o estado do seu código. Quanto mais específica cada tarefa, melhor será esse feedback.
 
 Como ferramentas, existem várias que podem te ajudar. Destacamos algumas como:
  * Jenkins
