--- a/desafios/D5.md
+++ b/desafios/D5.md
@@ -4,33 +4,33 @@ Bom, já conhecemos o caminho e chegamos a Produção com nosso MVP \o/. Contudo
 * O estado atual da sua aplicação está estável: sem bugs críticos ou features incompletas?
 * Todas as dependências e configurações são simples e fáceis de conseguir?
 
-Estes riscos são pequenos se consideramos que nossa aplicação ainda é muito simples e nosso time pequeno. Entretanto eles aumentam consideravelmente na medida que este contexto se altere ou quando pensamos em um deploy as pressas (lembra de quando perdemos o servidor?).
+Estes riscos são pequenos se consideramos que nossa aplicação ainda é muito simples e nosso time pequeno. Entretanto, eles aumentam consideravelmente à medida que este contexto se altera ou quando pensamos em um deploy às pressas (lembra de quando perdemos o servidor?).
 
 ## Objetivo
 
 * Automatizar o processo de build da nossa aplicação:
   * Baixar última versão do código
   * Executar testes
-  * Baixar dependencias
-  * Contruir executável
+  * Baixar dependências
+  * Construir executável
 
 ## Pré Requisitos
 
-* Ter acesso a nossa nova máquina de infraestrutura. Testar com o comando `ssh SEU_USUARIO@TODO.us-east-2.compute.amazonaws.com` (Caso não funcione da um grito no Slack =)
+* Ter acesso à nossa nova máquina de infraestrutura. Testar com o comando `ssh SEU_USUARIO@TODO.us-east-2.compute.amazonaws.com` (Caso não funcione, da um grito no Slack =)
 
 ## Conceitos e Pontos Importantes
 
 ### Integração Contínua
-Importante ressaltar que Integração Contínua é um conceito que vai além de uma ferramenta que automatiza algumas tarefas relacionadas ao seu código. É também  um dos pilares para a Entrega Contínua e requer disciplina do time para ser colocada em prática.
+É importante ressaltar que Integração Contínua é um conceito que vai além de uma ferramenta que automatiza algumas tarefas relacionadas ao seu código. É também  um dos pilares para a Entrega Contínua e requer disciplina do time para ser colocada em prática.
 
 [Este artigo](https://www.martinfowler.com/articles/continuousIntegration.html) do Martinho explica muito bem os detalhes deste conceito.
 
 ### CI
-CI é a sigla para Continuous Integration, porém é frequentemente utilizado por desenvolvedores para se referir à ferramente ou servidor de integração contínua.
+CI é a sigla para Continuous Integration, porém é frequentemente utilizado por desenvolvedores para se referir à ferramenta ou servidor de integração contínua.
 
 ### Pipelines
-Pipelines são sequências de tarefas onde o resultado de uma tarefa é a entrada para a próxima. No contexto de uma ferramenta de CI geralmente cada tarefa será um comando ou script que executará um passo do processo de build. 
-Um bom Pipepline é estruturado de uma forma que permite feedbacks rápidos sobre o estado do seu código. Quanto mais específica cada tarefa, melhor será esse feedback.
+Pipelines são sequências de tarefas onde o resultado de uma tarefa é a entrada para a próxima. No contexto de uma ferramenta de CI, geralmente cada tarefa será um comando ou script que executará um passo do processo de build. 
+Um bom Pipepline é estruturado de uma forma que permite feedback rápido sobre o estado do seu código. Quanto mais específica a tarefa, melhor será esse feedback.
 
 Como ferramentas, existem várias que podem te ajudar. Destacamos algumas como:
  * Jenkins
