--- a/desafios/D5.md
+++ b/desafios/D5.md
@@ -16,7 +16,7 @@ Estes riscos são pequenos se consideramos que nossa aplicação ainda é muito 
 
 ## Pré Requisitos
 
-* Ter acesso à nossa nova máquina de infraestrutura. Testar com o comando `ssh SEU_USUARIO@TODO.us-east-2.compute.amazonaws.com` (Caso não funcione, da um grito no Slack =)
+* Ter acesso à nossa nova máquina de infraestrutura. Testar com o comando `ssh SEU_USUARIO@ec2-18-221-59-75.us-east-2.compute.amazonaws.com` (Caso não funcione, da um grito no Slack =)
 
 ## Conceitos e Pontos Importantes
 
