--- a/desafios/D1.md
+++ b/desafios/D1.md
@@ -2,13 +2,13 @@
 
 Sempre quando começamos um projeto, uma das primeiras coisas a serem feitas é descobrir o caminho para produção (*path to production*).  
 
-O primeiro objetivo desse desafio é descobrir esse caminho em um ambiente/contexto bem básico onde temos um servidor Linux hospedado em uma instância EC2 da AWS e a meta é realizar o deploy de uma aplicação cuja rota `/` devolva `Hello World!`.
+O primeiro objetivo desse desafio é descobrir esse caminho em um ambiente/contexto bem básico onde temos um servidor Linux remoto e a meta é realizar o deploy de uma aplicação cuja rota `/` devolva `Hello World!`.
 
 Embora pareça algo bem trivial, existem vários conceitos, decisões e tarefas implícitas nas quais devemos nos preocupar.
 
 ## Objetivo
 
-Deploy de um `Hello World!` em um servidor Linux remoto hospedado em uma instância EC2 na AWS.
+Deploy de um `Hello World!` em um servidor Linux remoto hospedado em uma máquina qualquer.
 
 ## Pré Requisitos
 
@@ -20,10 +20,7 @@ Deploy de um `Hello World!` em um servidor Linux remoto hospedado em uma instân
 * Faça um Pull Request da sua alteração e comunique no grupo do Slack. Alguém irá adicionar seu usuário a nova instância.
 * Utilize o comando `ssh SEU_USUARIO@ec2-13-58-186-167.us-east-2.compute.amazonaws.com` para testar se seu acesso está liberado.
 * Construa uma aplicação **em qualquer linguagem/framework** cuja rota `/` devolva a mensagem `Hello World!`.
-* Hospede seu código em um repositório Git público.
-* Acesse a nossa instância EC2 via SSH.
-* Clone o repositório com seu código.
-* Inicialize um servidor web na mesma porta que você escolheu ao editar o `users.yml`.
+* Acesse a instância do servidor e publique a sua aplicação na mesma porta que você escolheu ao editar o `users.yml`.
 * Valide se ao acessar `http://ec2-13-58-186-167.us-east-2.compute.amazonaws.com:$PORTA` você recebe `Hello World!` como resposta.
 * Parabéns! Vá para o próximo desafio!
 
