--- a/desafios/D6.md
+++ b/desafios/D6.md
@@ -9,6 +9,8 @@ Automatizar o processo de Deploy da nossa aplicação. Após gerar o executável
 
 ## Conceitos e Pontos Importantes
 
+### [5 marcas de um bom pipeline de Entrega](https://www.thoughtworks.com/pt/insights/blog/5-traits-good-delivery-pipeline)
+
 ### [Implantação Contínua (Continuous Deployment)](https://www.4linux.com.br/diferencas-entre-integracao-deploy-e-entrega-continua)
 
 ### Ferramentas de Implantação
@@ -25,6 +27,9 @@ Humble, Jez; Farley, David. Entrega Contínua: Como Entregar Software de Forma R
 > Quando você implanta a aplicação, deve ter um script automatizado que realiza algum tipo de smoke test* para garantir que ela está rodando. Isso pode ser tão simples quanto executar a aplicação e garantir que a tela principal apareça com o conteúdo esperado. Seus smoke tests também devem garantir que os serviços dos quais a aplicação depende estejam rodando – como banco de dados, serviços de mensagens ou serviços externos. Um smoke test, ou teste de implantação, provavelmente é o teste mais importante a ser criado depois que você já tem um conjunto de testes unitários iniciais; podemos dizer que ele é ainda mais importante. Ele lhe dá a confiança de que a aplicação realmente está sendo executada. Se ela não conseguir ser executada, o smoke teste deve ser capaz de fornecer algum diagnóstico básico, como se a aplicação não está rodando devido a algo de que ela depende ou porque não está funcionando mesmo.
 
 Humble, Jez; Farley, David. Entrega Contínua: Como Entregar Software de Forma Rápida e Confiável (Page 117).  . Kindle Edition. 
+
+### Rollbacks
+É preciso pensar no que acontece em caso de falhas durante a implantação. Falhas poderão acontecer por vários motivos como uma feature com bugs, inconsistência de configurações, falhas em dependências e até mesmo falhas no script de deploy. E para cada tipo de falha temos técnicas que minimizam o impacto, porém o mais importante é a possibilidade de voltar uma versão estável o mais rápido possível. 
 
 ## Resultado esperado
 
