--- a/desafios/D1.md
+++ b/desafios/D1.md
@@ -1,17 +1,27 @@
 ## Contexto
 
-Sempre quando começamos um projeto, uma das primeiras coisas a serem feitas é descobrir o caminho a Produção.
-Neste primeiro desafio vamos descobrir esse caminho em um ambiente/contexto bem básico: temos apenas um servidor Linux disponível e a meta é ter um hello world rodando no mesmo.
-Embora pareça uma algo simples e básico, existem vários conceitos/decisões/tarefas implícitas.
+Sempre quando começamos um projeto, uma das primeiras coisas a serem feitas é descobrir o caminho à Produção (*Path to Production*).
+
+Muitas vezes encontraremos um caminho já definido. No caso de grandes empresas, infelizmente temos caminhos bem longos e complicados com limitações de recursos e acessos, fases manuais e bloqueios como: auditorias e janelas de *deploy*.
+
+Neste primeiro desafio lidaremos com um ambiente bem básico: temos apenas um servidor Linux disponível para colocar nossa aplicação em Produção. 
+
+Embora pareça algo trivial, existem vários conceitos, decisões e tarefas implícitas.
 
 ## Objetivo
 
-Deploy de um hello world em nosso servidor
+*Deploy* de uma aplicação cuja rota `/` devolva `Hello World!`.
+
+## Resultado esperado
+
+Acessar a URL: `http://ec2-13-58-186-167.us-east-2.compute.amazonaws.com:$PORTA` e visualizar a mensagem `Hello World`
+
+PS: `$PORTA` será a porta escolhida durante a configuração de suas informações.
 
 ## Pré Requisitos
 
-* Enviar chave SSH pública para acesso ao servidor
-* Após liberado o acesso, testar conexão com o comando `ssh SEU_USUARIO@ec2-13-58-186-167.us-east-2.compute.amazonaws.com`
+* Configurar informações para acesso aos servidores. Veja como [neste guia]()
+* Confirmar acesso ao servidor: `ec2-13-58-186-167.us-east-2.compute.amazonaws.com`
 
 ## Conceitos e Pontos Importantes
 
@@ -21,7 +31,3 @@ Deploy de um hello world em nosso servidor
 * Dependências para executar a aplicação
 * Deploy de uma aplicação
 * Exposição de uma aplicação
-
-## Resultado esperado
-
-Acessar a URL: `http://ec2-13-58-186-167.us-east-2.compute.amazonaws.com:$PORTA` e visualizar uma mensagem `Hello World`
