--- a/desafios/D1.md
+++ b/desafios/D1.md
@@ -2,7 +2,7 @@
 
 Sempre quando começamos um projeto, uma das primeiras coisas a serem feitas é descobrir o caminho à Produção (*Path to Production*).
 
-Muitas vezes encontraremos um caminho já definido. No caso de grandes empresas, infelizmente temos caminhos bem longos e complicados com limitações de recursos e acessos, fases manuais e bloqueios como: auditorias e janelas de *deploy*.
+Muitas vezes encontraremos um caminho já definido. No caso de grandes empresas, infelizmente é comum encontrarmos caminhos bem longos e complicados com limitações de recursos e acessos, fases manuais e bloqueios como: auditorias e janelas de *deploy*.
 
 Neste primeiro desafio lidaremos com um ambiente bem básico: temos apenas um servidor Linux disponível para colocar nossa aplicação em Produção. 
 
