--- a/desafios/D1.md
+++ b/desafios/D1.md
@@ -34,6 +34,5 @@ Embora estejamos falando de apenas um `Hello World` - que pode ser feito com ape
 ### Controle de versão
 [Este artigo](https://git-scm.com/book/pt-br/v1/Primeiros-passos-Sobre-Controle-de-Vers%C3%A3o) do Git explica muito bem os conceitos básicos de um controle de versão caso este tema seja uma novidade.
 
-### Dependências para executar a aplicação
-### Deploy de uma aplicação
-### Exposição de uma aplicação
+### *Deploy* de uma aplicação
+Como fazer seu código ficar disponível como uma aplicaço para o usuário? Quais arquivos precisam ser gerados e copiados para nosso servidor de produção? Quais os comandos a serem executadas? Quais configurações precisam ser realizadas em nosso servidor?
