--- a/desafios/D7.md
+++ b/desafios/D7.md
@@ -12,7 +12,7 @@ Para reforçar nossa arquitetura podemos utilizar uma técnica "simples" e muito
 
 Com mais de uma instância precisaremos de um componente para balancear a carga entre capaz de abstrair para gerencia-las
 
-No geral adicionamos um componente extra em nossa arquitetura que agirá como um Proxy para nossas instancias.  
+No geral adicionamos um componente extra em nossa arquitetura que agirá como um Proxy para nossas instancias. Estes componentes, também conhecidos como Balanceadores de Carga, conseguem coordenar nossas requisições distribuindo as mesmas apenas para as instancias ativas. 
 
 ## Objetivo
 Adicionar redundância a nossa aplicação para aumentar nossa disponibilidade.
@@ -34,4 +34,4 @@ Este tutorial apresenta uma sessão bem didática sobre estes 3 conceitos.
 
 ## Resultado esperado
 
-* Nossa aplicação deve continuar disponível mesmo quando uma de nossas instâncias falhe.
+* Nossa aplicação deve continuar disponível mesmo quando uma de nossas instâncias falhar.
